# rax-nanoGPT

./: .gitignore  README.md  demo_rax_safety.py  model.py  pyproject.toml  sample.py  test_model.py  test_model_simple.py  train.py
config/: benchmark_quick.py  test_quick.py  train_shakespeare.py
data/shakespeare/: meta.json  prepare.py
docs/: RAX_COMPILATION_VERIFICATION.md  RAX_INTEGRATION_SUMMARY.md
examples/: compare_rax_vs_standard.py  rax_features_demo.py  test_training_quick.py
tests/: test_comprehensive_rax.py  test_rax_integration.py  test_rax_shape_errors.py
