[project]
name = "rax-nanogpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jax>=0.6.2",
    "jaxlib>=0.6.2",
    "jaxtyping>=0.3.2",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "optax>=0.2.5",
    "rax",
    "requests>=2.32.4",
    "tiktoken>=0.9.0",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
rax = { git = "https://github.com/viraatdas/rax.git" }
